// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeSelect renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="base-Input relative text-black inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] cursor-[inherit] hover:[&_.resetButtonDirty]:visible h-8 w-full after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:inline-block after:content-[""] after:pointer-events after:cursor-default after:border after:border-solid after:border-gray after:rounded-sm [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue [&:has(input:focus)]:after:border-blue hover:[&:not(:has(input:focus))]:after:border-gray p-0 bg-white"
      >
        <select
          class="appearance-none select-none rounded-none min-w focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white base-Input border-none outline-none cursor-[inherit] bg-transparent box-border h-full resize-none peer [&::placeholder]:text-gray [&::placeholder]:opacity-100 [&::-webkit-calendar-picker-indicator]:bg text-md leading-4 w-full p-2 focus:bg-inheritColor pr-6"
          ownerstate="[object Object]"
          type="text"
        >
          <option
            disabled=""
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NativeSelect renders native select with the empty option enabled when enableReset is \`true\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative inline-flex text-[1rem] cursor-pointer w-full"
    >
      <div
        class="base-Input relative text-black inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] cursor-[inherit] hover:[&_.resetButtonDirty]:visible h-8 w-full after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:inline-block after:content-[""] after:pointer-events after:cursor-default after:border after:border-solid after:border-gray after:rounded-sm [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue [&:has(input:focus)]:after:border-blue hover:[&:not(:has(input:focus))]:after:border-gray p-0 bg-white"
      >
        <select
          class="appearance-none select-none rounded-none min-w focus:rounded-none [&_option]:bg-white [&_optgroup]:bg-white base-Input border-none outline-none cursor-[inherit] bg-transparent box-border h-full resize-none peer [&::placeholder]:text-gray [&::placeholder]:opacity-100 [&::-webkit-calendar-picker-indicator]:bg text-md leading-4 w-full p-2 focus:bg-inheritColor pr-6"
          ownerstate="[object Object]"
          type="text"
        >
          <option
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-inherit pointer-events"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
